// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Future transfer normalizer normalizeTransfer function add default values 1`] = `
Object {
  "description": "",
  "name": "",
}
`;

exports[`Future transfer normalizer normalizeTransfer function should remove extra properties 1`] = `
Object {
  "description": "",
  "name": "WeTransfer rocks",
}
`;

exports[`Future transfer normalizer normalizeTransfer function should return a normalized transfer 1`] = `
Object {
  "description": "",
  "name": "WeTransfer rocks",
}
`;
